Added brick background image

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>Brick of Shame</title>
   </head>
   <body>
-    <h1>brickofsha.me</h1>
-    <h2>Congratulations! You have accepted the Brick of Shame at a Drupal event coffee BOF.</h2>
-    <p class="lead">Accept your freeze dried prize using the
-    <a href="/handoff/index.html">interactive Brick of Shame handoff experience</a>*</p>
-    <p>* The interactive brick of shame handoff is best experienced in virtual reality and has been tested extensively using the Meta Quest 2**
-    <br />** I suppose you could also use it with one of those regular computers (if you must). Click and drag to simulate head tracking.</p>
-    <h4>Confused? Good (but this video might help.)</h4>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/4GmRszIPVPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <main>
+      <h1>brickofsha.me</h1>
+      <h2>Congratulations! You have accepted the Brick of Shame at a Drupal event coffee BOF.</h2>
+      <p class="lead">Accept your freeze dried prize using the
+      <a href="/handoff/index.html">interactive Brick of Shame handoff experience</a>*</p>
+      <p>* The interactive brick of shame handoff is best experienced in virtual reality and has been tested extensively using the Meta Quest 2**
+      <br />** I suppose you could also use it with one of those regular computers (if you must). Click and drag to simulate head tracking.</p>
+      <h4>Confused? Good, but this video might help (or make it worse).</h4>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/4GmRszIPVPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </main>
   </body>
 </html>
